# cyberfabric-core

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  rust-toolchain.toml
.clusterfuzzlite/: Dockerfile  build.sh
.cypilot-adapter/: artifacts.json
.cypilot/.core/requirements/: agent-compliance.md  code-checklist.md  consistency-checklist.md  execution-protocol.md  plan-decomposition.md  plan-template.md  prompt-engineering.md  reverse-engineering.md  workspace.md
.cypilot/.core/workflows/: analyze.md  generate.md  plan.md  workspace.md
.cypilot/config/: artifacts.toml
.github/workflows/: api_contracts.yml  ci.yml  e2e.yml  fmt.yml  gts-validation.yml  pr-governance.yml  pr-reviewer-check.yml  release-plz.yml
config/: quickstart.yaml
docs/api/: api.json
docs/arch/authorization/: AUTHZ_USAGE_SCENARIOS.md  DESIGN.md  INTEGRATION_TEST_PLAN.md  RESOURCE_GROUP_MODEL.md
docs/arch/errors/: DECOMPOSITION.md  DESIGN.md  PRD.md
docs/modkit_unified_system/: 12_unit_testing.md  13_e2e_testing.md  README.md
dylint_lints/: Cargo.toml
dylint_lints/de09_gts_layer/de0901_gts_string_pattern/: README.md
libs/modkit-db/src/: manager.rs
libs/modkit-security/src/: access_scope.rs
modules/chat_engine/api/: README.md  http-protocol.json
modules/mini-chat/docs/: DESIGN.md
modules/mini-chat/mini-chat-sdk/: Cargo.toml
testing/docker/: hyperspot.Dockerfile
testing/e2e/: README.md
tools/dylint_lints/: Cargo.toml
tools/dylint_lints/lint_utils/: Cargo.toml
tools/dylint_lints/lint_utils/src/: lib.rs
(+154 files in other folders)
