[package]
name = "lint_utils"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
test = false

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "54482290b5f32e6c6b57cc9e0a17153f432b0036" }
dylint_linting.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
